.k8s/overlays/local/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "*.localhost.com"
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
